--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -73,7 +73,13 @@ zectranet_delete_project:
 
 zectranet_project_add_post:
     pattern: /project/{project_id}/addNewPost
-    defaults: { _controller: ZectranetBundle:Project:addPost }
+    defaults: { _controller: ZectranetBundle:ProjectPost:addPost }
+    requirements:
+        project_id: \d+
+
+zectranet_project_get_post:
+    pattern: /project/{project_id}/getPosts
+    defaults: { _controller: ZectranetBundle:ProjectPost:getPosts }
     requirements:
         project_id: \d+
 
