--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,7 +10,7 @@ security:
             entity: { class: ZectranetBundle\Entity\User }
 
     role_hierarchy:
-                ROLE_ADMIN: ROLE_USER
+        ROLE_ADMIN: ROLE_USER
 
     firewalls:
         dev:
@@ -30,6 +30,7 @@ security:
 
     access_control:
          #- { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          #- { path: ^/user, roles: ROLE_USER }
          #- { path: ^/office, roles: ROLE_USER }
          #- { path: ^/project, roles: ROLE_USER }
