--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -3,7 +3,7 @@ parameters:
     database_driver: pdo_mysql
     database_host: 127.0.0.1
     database_port: 3306
-    database_name: zectratrading_com
+    database_name: zectratrading_c
     database_user: zectranet_com
     database_password: 123456
     mailer_transport: smtp
