--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,9 +1,11 @@
-# Learn more about services, parameters and containers at
-# http://symfony.com/doc/current/book/service_container.html
 parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    service_name:
+        class: ZectranetBundle\Services\TaskLogger
+        arguments: [@security.token_storage, @doctrine.orm.default_entity_manager]
+
+    zectranet.notifier:
+        class: ZectranetBundle\Services\Notifier
+        arguments: [@security.token_storage, @doctrine.orm.entity_manager, @router, @mailer]
