--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -288,14 +288,33 @@ zectranet_document_get:
     defaults: { _controller: ZectranetBundle:Upload:getDocuments }
 
 zectranet_document_rename:
-    pattern: documents/{fileid}/rename
+    pattern: /documents/{fileid}/rename
     defaults: { _controller: ZectranetBundle:Upload:renameDoc }
     requirements:
         fileid: \d+
 
 zectranet_document_delete:
-    pattern: documents/{fileid}/delete/
+    pattern: /documents/{fileid}/delete/
     defaults: { _controller: ZectranetBundle:Upload:removeDoc }
     requirements:
         fileid: \d+
 
+zectranet_show_sprint:
+    pattern: /office/{office_id}/sprint/{sprint_id}
+    defaults: { _controller: ZectranetBundle:Sprint:index }
+    requirements:
+        office_id: \d+
+        sprint_id: \d+
+
+zectranet_sprint_add:
+    pattern: /sprint/{office_id}/addSprint
+    defaults: { _controller: ZectranetBundle:Sprint:addSprint }
+    requirements:
+        office_id: \d+
+
+zectranet_sprint_delete:
+    pattern: /sprint/{office_id}/delete/{sprint_id}
+    defaults: { _controller: ZectranetBundle:Sprint:deleteSprint }
+    requirements:
+        office_id: \d+
+        sprint_id: \d+
