--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -175,9 +175,22 @@ zectranet_accept_request_user_project:
     requirements:
         project_id: \d+
 
+zectranet_accept_request_project:
+    pattern: /project/{project_id}/{office_id}/acceptRequestOfficeProject
+    defaults: { _controller: ZectranetBundle:Project:acceptRequestOfficeProject }
+    requirements:
+        project_id: \d+
+        office_id: \d+
+
 zectranet_decline_request_user_project:
     pattern: /project/{project_id}/declineRequestUserProject
     defaults: { _controller: ZectranetBundle:Project:declineRequestUserProject }
+    requirements:
+        project_id: \d+
+
+zectranet_decline_request_project:
+    pattern: /project/{project_id}/declineRequestOfficeProject
+    defaults: { _controller: ZectranetBundle:Project:declineRequestOfficeProject }
     requirements:
         project_id: \d+
 
