--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -169,6 +169,12 @@ zectranet_save_project_members:
     requirements:
         project_id: \d+
 
+zectranet_accept_request_user_office:
+    pattern: /office/{office_id}/acceptRequestUserOffice
+    defaults: { _controller: ZectranetBundle:Office:acceptRequestUserOffice }
+    requirements:
+        office_id: \d+
+
 zectranet_accept_request_user_project:
     pattern: /project/{project_id}/acceptRequestUserProject
     defaults: { _controller: ZectranetBundle:Project:acceptRequestUserProject }
@@ -180,6 +186,12 @@ zectranet_accept_request_project:
     defaults: { _controller: ZectranetBundle:Project:acceptRequestOfficeProject }
     requirements:
         project_id: \d+
+        office_id: \d+
+
+zectranet_decline_request_user_office:
+    pattern: /office/{office_id}/declineRequestUserOffice
+    defaults: { _controller: ZectranetBundle:Office:declineRequestUserOffice }
+    requirements:
         office_id: \d+
 
 zectranet_decline_request_user_project:
