--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -282,6 +282,12 @@ zectranet_add_post_header_forum_thread:
     requirements:
         thread_id: \d+
 
+zectranet_show_QnA_forum:
+    pattern: /QnAForum/{project_id}
+    defaults: { _controller: ZectranetBundle:QnAForum:showForum }
+    requirements:
+        project_id: \d+
+
 zectranet_accept_request_user_office:
     pattern: /office/{office_id}/acceptRequestUserOffice
     defaults: { _controller: ZectranetBundle:Office:acceptRequestUserOffice }
