--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -501,3 +501,7 @@ zectranet_show_project_versions:
 zectranet_send_user_membership_request:
     pattern: /request/send
     defaults: { _controller: ZectranetBundle:User:sendContactMembershipRequest }
+
+zectranet_get_contact_list:
+    pattern: /user/get/contact/list
+    defaults: { _controller: ZectranetBundle:User:# }
