--- a/src/ZectranetBundle/Resources/config/routing.yml
+++ b/src/ZectranetBundle/Resources/config/routing.yml
@@ -509,3 +509,11 @@ zectranet_approve_contact_membership_request:
 zectranet_get_contact_list:
     pattern: /user/get/contact_list
     defaults: { _controller: ZectranetBundle:User:getContactList }
+
+zectranet_get_conversation:
+    pattern: /user/get/conversation/{contact_id}
+    defaults: { _controller: ZectranetBundle:User:getConversation }
+
+zectranet_send_conversation_message:
+    pattern: /user/send/conversation/message/{conversation_id}
+    defaults: { _controller: ZectranetBundle:User:sendMessage }
